
-------------- Shoes 3.3.8 ------------------------------

=== New with 3.3.8
  * Ruby 2.4.5, Gems 3.03
  * Windows 64 bit. 
  * Updated versions of Gems (byebug, nokogiri, etc)
  * User written layout class. 
  * New options for ask_open_file
    https://github.com/shoes/shoes3/issues/444
  * limited support for touch screens (Linux, Windows)
    https://github.com/shoes/shoes3/issues/447

=== Fixed with 3.3.8
  * osx: improved building of gems if user has homebrew. 
    https://github.com/shoes/shoes3/issues/438
    https://github.com/shoes/shoes3/issues/443 
  * menu bug affected window resizing.
    https://github.com/shoes/shoes3/issues/430
  * some little unseen bugs
  * A bad file or a folder name would crash font() call.
    https://github.com/shoes/shoes3/issues/441
  * crash after drawing pie chart. Sometimes.
    crash saving plots with unknown file extensions. 
  * linux command line launch works better
  
=== Developer Issues with 3.3.8
  * Better cross building of gems (Windows gems from Linux)
  * Ruby 2.4+ compatible. Shipping with 2.5.5
  * Support for 64 bit on Windows 10
  * Can build Shoes for native windows api. Not working well enough.
  * better integration for gtk version 3.22 and beyond.
  * better building on Windows for Windows. 
 
-------------- Shoes 3.3.7 ------------------------------

=== New with 3.3.7
  * See wiki. https://github.com/shoes/shoes3/wiki/Shoes-3.3.7
  * Multiple Monitor support.
    https://github.com/shoes/shoes3/issues/374
  * Menubar and menus
    https://github.com/shoes/shoes3/issues/400
  * Settings class
    Provides Linux dbus registration.
    https://github.com/shoes/shoes3/issues/400
  * Gtk3 theming (Linux and Windows)
    https://github.com/shoes/shoes3/issues/354
    Most themes are not pure Gtk3 or version dependent - they may not work
    for you and/or your users.
  * Merge style packaging for Windows avoids Win 10 packaging problems.
    requires Windows machine or VM to perform Windows packaging.