@@ -14,11 +14,11 @@ Shoes.app(title: "Merge app into Shoes", width: 600, height: 900, resizable: fal
     ["app_start", 3, true,"Starting script", "App start script.rb"],
     ["app_loc", -1, true,"Application directory", "Start script is in here"],
     ["app_png", 0, true,"Icon for application", "Icon must be a png in the folder"],
-    ['useXML', 1, false,"AppStream xml file", "optional"], 
+    ['usexml', 4, true, "Do you want AppStream Metadata?", "App Stores will want this"],
+    ['xmlpath', 3, false,"AppStream xml file", "Locate your appdata.xml"], 
     ["maintainer", 0, true,"Maintainer", "Your name of company"],
     ["purpose", 0, true,"Purpose", "Short description of your application"],
-    #["linux_where", 0, true, "Install into", "/usr/local is a very good choice"],
-    #["create_menu", 4, true,"Create Desktop menu", "true is the best answer"],
+    ["no_integrate", 4, false,"Don't Create Desktop menus", "true (for most situations)"],
     ["category", 0, true,"Menu Category", "like Accessories or Office"],
     ["license_tag", 0, true,"Type of license", "MIT is accurate"],
     #["license", 1, true, "Your liscense", "in a txt file"]
