@@ -18,6 +18,7 @@
     https://github.com/shoes/shoes3/issues/444
   * limited support for touch screens (Linux, Windows)
     https://github.com/shoes/shoes3/issues/447
+  * Linux: Merge packaging creates AppImages
 
 === Fixed with 3.3.8
   * osx: improved building of gems if user has homebrew. 
@@ -35,8 +36,8 @@
 === Developer Issues with 3.3.8
   * Better cross building of gems (Windows gems from Linux)
   * Ruby 2.4+ compatible. Shipping with 2.5.5
-  * Support for 64 bit on Windows 10
-  * Can build Shoes for native windows api. Not working well enough.
+  * Support for 64 bit Ruby on Windows 10
+  * Can build Shoes for native windows api. Not working all that well.
   * better integration for gtk version 3.22 and beyond.
   * better building on Windows for Windows. 
  
